<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rkr.binatestation.dreammanager.fragments.dialog.ImagePickerFragment">

    <TextView
        android:id="@+id/FIP_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        android:text="@string/choose" />

    <RelativeLayout
        android:id="@+id/FIP_camera_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FIP_title"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/FIP_camera_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/title_activity_dream"
            android:src="@drawable/ic_camera_alt_black_24dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/FIP_camera_icon"
            android:layout_toRightOf="@+id/FIP_camera_icon"
            android:text="@string/camera" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/FIP_gallery_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FIP_camera_layout"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/FIP_gallery_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/title_activity_dream"
            android:src="@drawable/ic_image_black_24dp" />

        <TextView
            android:id="@+id/FIP_gallery"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/FIP_gallery_icon"
            android:layout_toRightOf="@+id/FIP_gallery_icon"
            android:text="@string/gallery" />
    </RelativeLayout>

    <Button
        android:id="@+id/FIP_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/FIP_gallery_layout"
        android:text="@android:string/cancel"
        tools:ignore="ButtonOrder" />
</RelativeLayout>
