<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AD_content_dream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_dream">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/AD_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/AD_dream_name_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/title_activity_dream"
                android:src="@drawable/ic_dream_manager_logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/AD_dream_name_icon"
                android:layout_toRightOf="@+id/AD_dream_name_icon">

                <EditText
                    android:id="@+id/AD_dream_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/name_your_dream"
                    android:inputType="textPersonName|text|textCapWords"
                    android:onClick="onClick"
                    tools:text="Dream 1" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/AD_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/AD_date_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/when_you_are_going_to_achieve_this_dream"
                android:src="@drawable/ic_date_range_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/AD_date_icon"
                android:layout_toRightOf="@id/AD_date_icon">

                <EditText
                    android:id="@+id/AD_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/when_you_are_going_to_achieve_this_dream"
                    android:inputType="date"
                    android:onClick="onClick"
                    tools:text="May 2018" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/AD_amount_icon"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                tools:text="$" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/AD_amount_icon"
                android:layout_toRightOf="@id/AD_amount_icon">

                <EditText
                    android:id="@+id/AD_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/how_much_it_costs_to_achieve_this_dream"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:onClick="onClick"
                    tools:text="10,00,000" />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/AD_add_money_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/amount_spent_till_the_day"
                android:src="@drawable/ic_date_range_black_24dp"
                android:visibility="invisible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/AD_action_add_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/add_money"
                android:onClick="onClick"
                android:src="@drawable/ic_add_circle_outline_white_24dp"
                app:fabSize="mini" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/AD_add_money_icon"
                android:layout_toLeftOf="@id/AD_action_add_money"
                android:layout_toRightOf="@id/AD_add_money_icon"
                android:layout_toStartOf="@id/AD_action_add_money">

                <EditText
                    android:id="@+id/AD_add_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/amount_spent_till_the_day"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:onClick="onClick"
                    tools:text="50,000" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
